# op_ag

./: .env  pyproject.toml
src/op_ag/: chatbot.py
